<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >
<TextView android:id="@+id/text"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:text="@string/choice2"
    android:textSize="20dp"
    android:gravity="center"
    android:padding="10dp" />
    <ImageView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/text"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/icon"/>
    <Button  android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:text="@string/TWIN"
        android:onClick="goTwin"
        android:layout_margin="10dp"

        android:background="@color/colorPrimaryDark"
        android:padding="15dp"
        android:textSize="20sp"
        />
    <Button  android:id="@+id/five"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/intro"
        android:text="@string/single"
        android:onClick="goSingle"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"

        android:padding="15dp"
        android:textSize="20sp"
        />
    <!--TextView to show user turns and winner-->

</RelativeLayout>