<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Twoplayermenu">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        >
        <TextView android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/choice"
            android:textSize="20dp"
            android:gravity="center"
            android:padding="10dp" />
        <ImageView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/icon"/>
        <Button  android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:text="@string/three"
            android:onClick="goThree"
            android:layout_margin="10dp"

            android:background="@color/colorPrimaryDark"
            android:padding="15dp"
            android:textSize="20sp"
            />
        <Button  android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/intro"
            android:text="@string/five"
            android:onClick="goFive"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"

            android:padding="15dp"
            android:textSize="20sp"
            />
        <Button  android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_below="@+id/five"
            android:text="@string/back"
            android:onClick="goBack"
            android:padding="15dp"
            android:textSize="20sp"
            />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>