<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getPlayers">

    <RelativeLayout
        android:id="@+id/activity_first_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/etPlayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_player"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/etPlayer2"
            android:layout_below="@id/etPlayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_player"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            />


        <Button
            android:id="@+id/bPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:layout_margin="16dp"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_below="@id/etPlayer2"
            android:layout_centerHorizontal="true"
            />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>