<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@color/background"
    >

    <TextView android:id="@+id/me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/you"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/comp"
        android:textSize="18sp"/>
    <TextView
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/mescore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/me"
        android:text="0"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/cscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/comp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="0"
        android:textSize="18sp"/>
    <!--Table Layout with 3 rows and each row with 3 buttons-->

    <TableLayout
        android:id="@+id/glGameBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mescore"
        android:textColor="#FFFFFF"
        android:rowCount="3"
        android:columnCount="3"
        android:padding="5dp"
        >

        <!--Row 1-->
        <TableRow>

            <Button
                android:id="@+id/one"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_margin="2dp"
                style="@style/Widget.AppCompat.Button"
                />

            <Button
                android:id="@+id/two"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_margin="2dp"
                style="@style/Widget.AppCompat.Button"
                />

            <Button
                android:id="@+id/three"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_margin="2dp"
                style="@style/Widget.AppCompat.Button"
                />

        </TableRow>

        <!--Row 2-->
        <TableRow>

            <Button
                android:id="@+id/four"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_margin="2dp"
                style="@style/Widget.AppCompat.Button"
                />

            <Button
                android:id="@+id/five"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_margin="2dp"
                style="@style/Widget.AppCompat.Button"
                />

            <Button
                android:id="@+id/six"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_margin="2dp"
                style="@style/Widget.AppCompat.Button"
                />

        </TableRow>

        <!--Row 3-->
        <TableRow>

            <Button
                android:id="@+id/seven"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_margin="2dp"
                style="@style/Widget.AppCompat.Button"
                />

            <Button
                android:id="@+id/eight"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_margin="2dp"
                style="@style/Widget.AppCompat.Button"
                />

            <Button
                android:id="@+id/nine"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_margin="2dp"
                style="@style/Widget.AppCompat.Button"
                />

        </TableRow>

    </TableLayout>
    <TextView android:id="@+id/dialogue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="20dp"
        android:layout_below="@+id/glGameBoard"
        android:gravity="center_horizontal"
        android:textSize="16sp"/>


    <Button  android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/dialogue"
        android:text="@string/reset"
        android:padding="15dp"
        android:textSize="20sp"
        />
    <Button  android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/dialogue"
        android:text="@string/back"
        android:onClick="goBack"
        android:padding="15dp"
        android:textSize="20sp"
        />
    <!--TextView to show user turns and winner-->

</RelativeLayout>